# MemoryVisualizer

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
.zed/: tasks.json  tasks.sync-conflict-20260128-220750-OCDZVO6.json
src/: MemoryTracker.hpp  main.cpp
